[tool.poetry]
name = "rmenai-blueprints/python"
version = "0.1.0"
description = "My Python template"
authors = ["rmenai <rami.menai@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
taskipy = "^1.8.2"

[tool.poetry.dev-dependencies]
colorlog = "^6.5.0"
coverage = "^6.1.1"
flake8 = "^4.0.1"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^21.9.1"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.1.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.4.1"
flake8-todo = "^0.7"
pep8-naming = "^0.12.1"
pre-commit = "^2.15.0"
pytest = "^7.0.1"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "python -m app"
test = "coverage run -m pytest tests/"
report = "coverage report"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
